Fix structure and firebase-tools dependency. Included create files for product

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
+    "firebase-tools": "^3.2.2",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
     "typescript": "~2.0.3"
