--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "angularfire2": "^2.0.0-beta.7",
     "core-js": "^2.4.1",
     "firebase": "^3.6.6",
+    "ng2-toastr": "^1.4.1",
     "rxjs": "5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.4"
