--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@angular/core": "~2.4.0",
     "@angular/forms": "~2.4.0",
     "@angular/http": "~2.4.0",
+    "@angular/material": "^2.0.0-beta.2",
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
     "angularfire2": "^2.0.0-beta.7",
     "core-js": "^2.4.1",
     "firebase": "^3.6.6",
+    "hammerjs": "^2.0.8",
     "ng2-toastr": "^1.4.1",
     "rxjs": "5.0.1",
     "ts-helpers": "^1.1.1",
@@ -43,6 +45,7 @@
     "angular-cli": "1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
     "firebase-tools": "^3.2.2",
+    "node-sass": "^4.5.0",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
     "typescript": "~2.0.3"
