--- a/package.json
+++ b/package.json
@@ -21,35 +21,28 @@
   "author": "marianayamamoto",
   "license": "UNLICENSED",
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/material": "git+https://github.com/angular/material2-builds.git",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/platform-server": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "angularfire2": "^2.0.0-beta.7",
-    "core-js": "^2.4.1",
-    "firebase": "^3.6.6",
+    "@angular/animations": "^4.0.2",
+    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/cli": "^1.2.0",
+    "@angular/common": "^4.0.2",
+    "@angular/compiler": "^4.0.2",
+    "@angular/compiler-cli": "^4.0.2",
+    "@angular/core": "^4.0.2",
+    "@angular/forms": "^4.0.2",
+    "@angular/http": "^4.0.2",
+    "@angular/material": "^2.0.0-beta.8",
+    "@angular/platform-browser": "^4.0.2",
+    "@angular/platform-browser-dynamic": "^4.0.2",
+    "@angular/platform-server": "^4.0.2",
+    "@angular/router": "^4.0.2",
+    "angular": "^1.6.5",
+    "angularfire2": "^4.0.0-rc.1",
+    "firebase": "^4.1.3",
     "hammerjs": "^2.0.8",
-    "ng2-toastr": "^1.4.1",
-    "rxjs": "5.0.1",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.8.5"
-  },
-  "devDependencies": {
-    "@angular/cli": "^1.0.0",
-    "@angular/compiler-cli": "^2.4.0",
-    "@types/jasmine": "2.5.38",
-    "codelyzer": "~2.0.0-beta.1",
-    "firebase-tools": "^3.2.2",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.4.2",
-    "typescript": "^2.2.2"
+    "ng2-toastr": "^4.1.2",
+    "rxjs": "^5.4.2",
+    "typescript": "^2.4.1",
+    "typings": "^2.1.1",
+    "zone.js": "^0.8.12"
   }
 }
